frontend/src/App.css
/* ... */
@media only screen and (max-width: 1000px) {
  .whiteborder.avatar {
    min-width: 40px;
    min-height: 40px;
  }
  .cat {
    width: 300px;
    height: 300px;
  }
  .xmargin {
    max-height: 50vh;
  }
  .xmargin p {
    height: 30vh;
    width: 80%;
  }
  .bigavatar.avatar {
    width: 75px;
    height: 75px;
  }
  .profilebackground {
    min-height: 40vh;
  }
  .chatdeletediv,
  .messagedeletediv {
    position: absolute;
    left: 10%;
    top: 40%;
    padding: 30px;
    border: 3px solid gold;
    z-index: 2;
    height: 20vh;
    width: 80%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    background-color: black;
    color: white;
  }
  .messagedeletediv {
    gap: 30px;
  }
  .chatdeletediv {
    gap: 20px;
  }
  .chatdeletediv button {
    height: 50px;
    width: 70px;
    font-weight: bold;
    font-size: 15px;
  }
  .yes {
    background-color: green;
    color: white;
    font-weight: bold;
  }
  .no {
    background-color: red;
    color: white;
    font-weight: bold;
  }
  .mobile {
    display: block !important;
  }
  .nonmobile {
    display: none;
  }
  /* .biobutton {
    width: 70px;
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
  } */
  h2 {
    font-size: 20px;
  }
  .smallgap {
    gap: 10px;
    margin: 0 10px;
  }
  .avatar {
    min-width: 50px;
    min-height: 50px;
  }
  .imgcontainer img {
    max-width: 300px;
    max-height: 300px;
  }
  .profbuttons {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
  }

  .biobutton,
  .changepass {
    margin: 0;
  }
}

@media only screen and (max-width: 702px) {
  .left {
    width: 100vw;
    height: 5vh;
    grid-area: 2 / 1 / 3 / 2;
    flex-direction: row;
  }
  .mid {
    height: 95vh;
    grid-area: 1 / 1 / 2 / 2;
    min-width: 100vw;
  }
  .messagebox,
  .newgroup {
    height: 95vh;
    width: 100vw;
    grid-area: 1 / 1 / 2 / 2;
    color: black;
    background-color: white;
  }

  .imgcontainer {
    display: none;
  }
  .profile {
    height: 95vh;
    width: 100vw;
  }
  .groupinfo {
    font-size: 15px;
  }
  .cat {
    width: 200px;
    height: 200px;
  }
  h1 {
    font-size: 60%;
  }
  .form h2 {
    font-size: 60%;
  }
  .profcollright,
  .collleft,
  .collright,
  .ngright {
    display: block !important;
  }
  .body {
    display: grid;
    grid-template-columns: 100vw;
    grid-template-rows: 95vh 5vh;
  }
  .collapse {
    display: none !important;
  }
  .newgroup input {
    max-width: 200px;
  }

  .topbuttons {
    gap: 10px;
    flex-direction: column;
  }
  .topbuttons button {
    width: 30px;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 10px;
  }
  .chatinfotop .avatar {
    max-width: 50px;
    max-height: 50px;
  }

  /* .groupedtogether {
    align-items: center;
    justify-content: center;
  } */

  .profilebackground {
    min-height: 30vh;
  }
  .closeprof {
    width: 48px;
    height: 48px;
    right: 0px;
    top: 0px;
  }
  .profcollright {
    width: 36px;
    height: 36px;
    right: 0px;
    top: 0px;
  }
  .row {
    padding-right: 50px;
    gap: 20px;
  }
  .profile textarea {
    max-width: 50vw;
  }

  .biodiv p,
  .xmargin p {
    width: 80%;
    height: 20vh;
    word-wrap: break-word;
    overflow-y: auto;
  }
  .xmargin {
    max-height: 60vh;
  }

  .biodiv textarea {
    min-width: 250px;
    min-height: 20vh;
  }
  .chatdeletediv button {
    height: 50px;
    width: 70px;
    font-weight: bold;
    font-size: 15px;
  }
  .login {
    font-size: 15px;
  }
}

